Text alignment bug fix

--- a/css/style.css
+++ b/css/style.css
@@ -1550,6 +1550,7 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
   background-color: var(--color-bg-container);
   padding: 96px 24px;
   border-radius: 10px;
